# ZoSolvers

./: README.md  pyproject.toml
src/ZoSolvers/: minimax.py  minimisation.py  utils.py
tests/: demo_min.py  demo_minimax.py  min_test.py  minimax_test.py
